Fix labels overlapping

--- a/global-weaponmeta/weaponmeta.css
+++ b/global-weaponmeta/weaponmeta.css
@@ -12,7 +12,7 @@
 
 .weapons-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(370px, 1fr));
     gap: 24px;
     width: 90%;
     margin: 0 auto;
@@ -470,6 +470,7 @@
     background-color: rgba(255, 255, 255, 0.5); 
 }
 
+/* Loader should take all grid items */
 .loader-grid-item {
     grid-column: 1 / -1;
     display: flex;
